# multimodal-query-demo

./: .gitignore  Cargo.toml  PROOFS.md  README.md  SCOPE.md
audit/: README.md
audit/mqd-bench/: mqd_bench_scan.dsse.json  mqd_bench_scan.intoto.json  mqd_bench_scan.sarif.json  mqd_bench_scan.txt
audit/mqd-cli/: mqd_cli_scan.dsse.json  mqd_cli_scan.intoto.json  mqd_cli_scan.sarif.json  mqd_cli_scan.txt
audit/mqd-core/: mqd_core_scan.dsse.json  mqd_core_scan.intoto.json  mqd_core_scan.sarif.json  mqd_core_scan.txt
audit/mqd-engine/: mqd_engine_scan.dsse.json  mqd_engine_scan.intoto.json  mqd_engine_scan.sarif.json  mqd_engine_scan.txt
crates/mqd-bench/: Cargo.toml  README.md
crates/mqd-bench/benches/: ingest_throughput.rs  ops_scale.rs  query_latency.rs
crates/mqd-bench/src/: lib.rs
crates/mqd-cli/: Cargo.toml  README.md
crates/mqd-cli/src/: cli.rs  main.rs  reporter.rs
crates/mqd-cli/src/commands/: bench.rs  figs.rs  generate.rs  ingest.rs  mod.rs  non_claims.rs  op.rs  query.rs
crates/mqd-core/: Cargo.toml  README.md
crates/mqd-core/src/: errors.rs  event.rs  ids.rs  lib.rs  non_claims.rs  schema.rs  status.rs  summary.rs
crates/mqd-core/tests/: non_claim_lock.rs
crates/mqd-engine/: Cargo.toml  README.md
crates/mqd-engine/src/: generator.rs  lib.rs  store.rs
crates/mqd-engine/src/ingest/: batcher.rs  mod.rs
crates/mqd-engine/src/ops/: mod.rs  proximity.rs  speed.rs
crates/mqd-engine/src/query/: latest_at.rs  mod.rs  range_scan.rs
crates/mqd-engine/tests/: concurrent_snapshots.rs  deterministic_replay.rs
notebooks/: reproduce.ipynb
paper/: build.sh  multimodal-query-demo.tex
