[package]
name        = "mqd-core"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
description = "Shared types, Arrow schemas, status traits, and non-claims for the multimodal-query-demo workspace."

[dependencies]
arrow        = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
arrow-buffer = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
parking_lot  = { workspace = true }
