[package]
name        = "mqd-engine"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
description = "Async ingest, snapshot-isolated store, point-in-time query, and domain operators over Arrow."

[dependencies]
mqd-core     = { workspace = true }
arrow        = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
arrow-buffer = { workspace = true }
arrow-ipc    = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
tokio-util   = { workspace = true }
futures      = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
arc-swap     = { workspace = true }
parking_lot  = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
rand         = { workspace = true }
rand_pcg     = { workspace = true }

[dev-dependencies]
tokio        = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
